# dalios

./: .dockerignore  .env.example  .env.template  .gitignore  App.jsx  DALIOS.spec  Dockerfile  INSTALL.md  Procfile  README.md  android_main.py  build-android.sh  build-ios.sh  build-mac.sh  build.bat  build.sh  buildozer.spec  desktop.py  docker-compose.yml  fly.toml  index.html  ios_main.py  main.py  package.json  railway.json  render.yaml  requirements.txt  run_ui.bat  run_ui.sh  setup.bat  start.bat  vite.config.js
.claude/: launch.json
.github/workflows/: build-release.yml
agents/: __init__.py  dalio_agent.py
api/: __init__.py  agent.py  auth.py  brokers.py  portfolio.py  scanners.py  server.py  signals.py  state.py  utils.py  websocket.py
backtesting/: __init__.py  walk_forward.py
config/: assets.py  settings.py
data/: broker_credentials.json.template
data/ingestion/: __init__.py  macro_data.py  market_data.py  news_data.py
engines/: __init__.py  correlation_engine.py  quadrant_engine.py  risk_parity_engine.py  sentiment_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
mobile/: App.jsx  package.json
notifications/: __init__.py  notifier.py
src/: App.jsx
tests/: conftest.py  test_analytics.py  test_api_endpoints.py  test_fee_model.py  test_paper_trading.py  test_position_sizing.py  test_settings.py
trading/: __init__.py  circuit_breaker.py  execution.py  signal_generator.py
ui/: index.html  splash.html
ui/static/: app.js  (+1 more)
(+25 files in other folders)
